[package]
name = "aihorde-rs"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/lapismyt/aihorde-rs"
readme = "README.md"
description = "Rust library for using AI Horde with ease"
authors = ["Nikita Ugnich"]
license-file = "LICENSE"
keywords = ["aihorde", "ai", "stable-diffusion", "image-generation", "text-to-image"]
categories = ["asynchronous", "multimedia::images", "web-programming::http-client"]

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
log = "0.4.28"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
url = "2.5.7"

[dev-dependencies]
env_logger = "0.11"
